// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bateson tests bateson stuff 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "changes": Array [
          Object {
            "from": Object {
              "_type": "face",
              "nose": "slim",
            },
            "op": "wut",
            "to": Object {
              "_type": "face",
              "nose": "big",
            },
          },
        ],
        "field": "face",
        "op": "modifyField",
        "type": "face",
      },
    ],
    "field": "keeper",
    "op": "modifyField",
    "type": "keeper",
  },
  Object {
    "changes": Array [
      Object {
        "from": Object {
          "_type": "zebra",
          "face": Object {
            "_type": "face",
            "eyes": 2,
            "nose": "long",
          },
        },
        "op": "only-zebra-stuff",
        "to": Object {
          "_type": "zebra",
          "face": Object {
            "_type": "face",
            "eyes": 3,
            "nose": "longandbig",
          },
        },
      },
    ],
    "field": "zebra",
    "op": "modifyField",
    "type": "zebra",
  },
]
`;

exports[`bateson tests google maps example 1`] = `
Array [
  Object {
    "from": Object {
      "lat": 23.23,
      "long": 40.4,
    },
    "op": "venueLocationChanged",
    "to": Object {
      "lat": 24,
      "long": 30.3,
    },
  },
]
`;

exports[`bateson tests simple object stuff 1`] = `
Array [
  Object {
    "from": Object {
      "_type": "human",
      "head": Object {
        "face": Object {
          "nose": "slim",
        },
      },
    },
    "op": "eyesAdded",
    "to": Object {
      "_type": "human",
      "head": Object {
        "face": Object {
          "eyes": 2,
          "nose": "big",
        },
      },
    },
  },
  Object {
    "from": Object {
      "_type": "human",
      "head": Object {
        "face": Object {
          "nose": "slim",
        },
      },
    },
    "op": "noseChanged",
    "to": Object {
      "_type": "human",
      "head": Object {
        "face": Object {
          "eyes": 2,
          "nose": "big",
        },
      },
    },
  },
]
`;

exports[`when adding field should generate add operation 1`] = `
Array [
  Object {
    "field": "author",
    "op": "add",
    "value": "J. K. Rowling",
  },
]
`;

exports[`when diffing given no summarizer for object, should use default summarizers 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "changes": Array [
          Object {
            "from": "Steve Irwin",
            "op": "editText",
            "to": "Bindi Irwin 😭",
            "type": "string",
          },
        ],
        "field": "name",
        "op": "modifyField",
        "type": "string",
      },
    ],
    "field": "keeper",
    "op": "modifyField",
    "type": "keeper",
  },
]
`;

exports[`when diffing given summarizer for object, should defer execution of un-handled fields to the algorithm 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "from": "ref-123",
        "op": "my-custom-action",
        "to": "ref-456",
      },
      Object {
        "changes": Array [
          Object {
            "from": "my-fancy-source",
            "op": "editText",
            "to": "my-fancy-source-2",
            "type": "string",
          },
        ],
        "field": "source",
        "op": "modifyField",
        "type": "string",
      },
    ],
    "field": "profile",
    "op": "modifyField",
    "type": "image",
  },
]
`;

exports[`when diffing given summarizer for object, should use custom summarizer 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "from": "Steve Irwin",
        "op": "keeperNameChanged",
        "to": "Bindi Irwin 😭",
      },
    ],
    "field": "keeper",
    "op": "modifyField",
    "type": "keeper",
  },
]
`;

exports[`when modifying booleans should generate edit operation 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "from": false,
        "op": "edit",
        "to": true,
      },
    ],
    "field": "isPublished",
    "op": "modifyField",
    "type": "boolean",
  },
]
`;

exports[`when modifying numbers should generate edit operation 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "from": 1,
        "op": "edit",
        "to": 2,
      },
    ],
    "field": "rating",
    "op": "modifyField",
    "type": "number",
  },
]
`;

exports[`when modifying strings should generate editText operation 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "from": "J. R. R. Tolkien",
        "op": "editText",
        "to": "J. K. Rowling",
        "type": "string",
      },
    ],
    "field": "author",
    "op": "modifyField",
    "type": "string",
  },
]
`;

exports[`when providing custom summarizer for built-in type should use the provided one 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "from": "J. R. R. Tolkien",
        "op": "changeText",
        "to": "J. K. Rowling",
      },
    ],
    "field": "author",
    "op": "modifyField",
    "type": "string",
  },
]
`;

exports[`when removing field should generate remove operation 1`] = `
Array [
  Object {
    "field": "author",
    "op": "remove",
  },
]
`;
